--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,25 +2,78 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 body{
-    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 :root{
      --Very-Dark-Gray: hsl(0, 0%, 17%);
      --Dark-Gray: hsl(0, 0%, 59%);
 }
 .overall-wrapper{
-    max-width: 720px;
+    position: relative;
+    width: 100%;
+    height: 100%;
     font-family: 'Rubik', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .header{
-    background: url(../images/pattern-bg.png);
     text-align: center;
     color: white;
+    background: url(../images/pattern-bg.png);
+    position: relative;
+    width: 100%;
+    text-align: center;
+    background-size:cover;
+    display: flex;
+    height:15rem;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+.header h1{
+    margin-top: 1.5rem;
+}
+.query{
+    
+}
+.ip-info{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    border-radius: 15px;
+    width: 80%;
+    position: absolute;
+    top: 25%;
+    background-color: white;
+    z-index: 1;
+    gap: 1.9rem;
+    padding: 1rem;
+}
+.info-item{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.info-item h4{
+    color: var(--Dark-Gray);
+    font-weight: 500;
+    font-size: 0.8rem;
+}
+.info-item p{
+    font-weight: 700;
+    font-size: 1.3rem;
 }
 #map{
-    height: 480px;
+    height: 40rem;
+    width:100%;
+    z-index: 0;
+    padding: 15px;
+    
 }
 button{
     cursor: pointer;
